# k-queen-solver

./: .eslintrc.cjs  .gitignore  .gitmodules  CMakeLists.txt  Makefile  firebase.json  package-lock.json  package.json  svelte.config.js
queen_solver/: queen_solver.cpp
queen_solver_tests/: queen_solver_tests.cpp
src/lib/components/: chessboard.svelte
src/routes/: +page.svelte
